--- a/slide.ipynb
+++ b/slide.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "pandas 有兩種物件\n",
     " - Series：通常拿來處理一維資料，如時間序列。\n",
-    "        * 長的跟list有點像，但Series的type還是Series\n",
+    "     * 長的跟list有點像，但Series的type還是Series\n",
     " - Dataframe：有點像Table(表格)，用來處理 csv 這種列有索引，欄有標籤的二維資料。"
    ]
   },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
    },
    "source": [
     "練習1:\n",
-    ">做出一個 水果-價錢 的 Series，以水果名字為index，價格自己訂"
+    " * 做出一個 水果-價錢 的 Series，以水果名字為index，價格自己訂"
    ]
   },
   {
@@ -276,7 +276,7 @@
     "price=[10,20,8,80] <br>\n",
     "fruit_price=pd.Series(price,index=fruit)<br>\n",
     "print(fruit_price)<br>\n",
-    "print(type(fruit_price))\n",
+    "print(type(fruit_price))<br>\n",
     "</div >"
    ]
   },
@@ -415,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * 用 傳統的 (for i in ori_list...) 來將兩個list的內容相加的運算時間會是用 pd_series + pd_series 來相加的 數十倍"
+    "用 傳統的 (for i in ori_list...) 來將兩個list的內容相加的運算時間會是用 pd_series + pd_series 來相加的 數十倍"
    ]
   },
   {
@@ -426,12 +426,49 @@
     }
    },
    "source": [
-    "資料選取方式"
+    "資料選取方式\n",
+    " * Series就像是有順序的dictionary\n",
+    " * 你可以用list的方式來選取資料\n",
+    " * 也可以用dictionary的key_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "--------------------\n",
+      "Alex     Labrador Retriever\n",
+      "Alice                Beagle\n",
+      "Neo               Dachshund\n",
+      "Kenny             Shiba Inu\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# 若不加後面的index，則index預設是0,1,2,3...\n",
+    "pets = ['Labrador Retriever', 'Beagle', 'Dachshund', 'Shiba Inu']\n",
+    "pets_index = ['Alex', 'Alice', 'Neo', 'Kenny']\n",
+    "series_1 =  pd.Series(pets,index=pets_index)\n",
+    "print(type(series_1))\n",
+    "print('-'*20)\n",
+    "print(series_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -471,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -493,24 +530,22 @@
     }
    ],
    "source": [
-    "###### 也可以像這樣選取連續資料，想想 for i in range (n)的邏輯\n",
+    "#也可以像這樣選取連續資料，想想 for i in range (n)的邏輯\n",
     "print(series_1[1:2]) # 從第2個到第3個\n",
     "print('-'*20)\n",
     "print(series_1[:'Neo']) #從第一個 ~ Neo"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "建立data frame:\n",
-    "用.DataFrame()將一個 dictionary 的資料結構轉換成 data frame(df)。"
+    "# 建立data frame:\n",
+    " * 用.DataFrame()將一個 dictionary 的資料結構轉換成 data frame(df)。"
    ]
   },
   {
@@ -610,19 +645,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "Df處理數據\n",
-    "> * 面對它\n",
-    "> * 處理它\n",
-    "> * 放下它"
+    "# Df處理數據\n",
+    " * 面對它\n",
+    " * 處理它\n",
+    " * 放下它\n",
+    "<img style=\"float: right;\" src=\"https://www.mirrormedia.com.tw/assets/images/20180323181358-a5552d7672697b9c5796b4179b5e0940-mobile.jpg\" width=\"50%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "面對它\n",
+    " * 1.查看數據中的類型.dtypes\n",
+    " * 2.查看數據的值.values\n",
+    " * 3.查看數據的分析.describe"
    ]
   },
   {
@@ -657,20 +705,6 @@
     "df=pd.DataFrame(dic)\n",
     "df.index = name\n",
     "print(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "面對它\n",
-    " * 1.查看數據中的類型.dtypes\n",
-    " * 2.查看數據的值.values\n",
-    " * 3.查看數據的分析.describe"
    ]
   },
   {
@@ -731,7 +765,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -765,12 +803,12 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "練習2:\n",
-    ">把下面的DataFrame依照math成績由高到低做出降冪排序\n",
+    " # 練習2:\n",
+    "把下面的DataFrame依照math成績由高到低做出降冪排序\n",
     "[參考](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.sort_values.html)"
    ]
   },
@@ -823,18 +861,32 @@
     }
    },
    "source": [
-    "處理它\n",
+    "# 處理它\n",
     " * 數據清洗:\n",
-    "> * 判斷空值:\n",
+    " * 判斷空值:\n",
     "     * .isnull()\n",
     "     * .notnull() \n",
-    "> * 丟棄\n",
+    " * 丟棄\n",
     "    * 丟棄值.drop()\n",
     "    * 丟棄空值.dropna()\n",
-    "> * 填充.fillna()\n",
-    "> * 替換.replace() \n",
-    "> * [參考1](https://blog.csdn.net/zhili8866/article/details/68134481)\n",
+    " * 填充.fillna()\n",
+    " * 替換.replace() \n",
+    " * [參考1](https://blog.csdn.net/zhili8866/article/details/68134481)\n",
     "//[Document](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.replace.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "空值的處理方法:\n",
+    "> * 1.直接刪除整筆資料\n",
+    "> * 2.拿平均值或中位數來替代\n",
+    "> * 3.保留空值並忽略它"
    ]
   },
   {
@@ -842,7 +894,7 @@
    "execution_count": 25,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -870,21 +922,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "空值的處理方法:\n",
-    "> * 1.直接刪除整筆資料\n",
-    "> * 2.拿平均值或中位數來替代\n",
-    "> * 3.保留空值並忽略它"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -947,18 +989,22 @@
     }
    },
    "source": [
-    "處理它\n",
+    "# 處理它\n",
     " * 合併資料:\n",
-    "> * .concat(): 直接水平或垂直整併兩組資料\n",
-    "     * .join(): 若合併時發現資料有缺值，決定是建立一列新的資料或是忽略該資料\n",
-    "> * .merge(): 根據相同欄位內容來合併\n",
-    "> * .append(): 直接將數據增加為新的列[參考](https://pandas.pydata.org/pandas-docs/stable/merging.html#concatenating-using-append)"
+    " * .concat(): 直接水平或垂直整併兩組資料\n",
+    "    * .join(): 若合併時發現資料有缺值，決定是建立一列新的資料或是忽略該資料\n",
+    " * .merge(): 根據相同欄位內容來合併\n",
+    " * .append(): 直接將數據增加為新的列[參考](https://pandas.pydata.org/pandas-docs/stable/merging.html#concatenating-using-append)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -998,7 +1044,7 @@
    "execution_count": 28,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1047,26 +1093,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "merge 跟 concat 他還有一些不常用的參數，未來有時間有興趣可以自己看文件，\n",
-    "或是Lesson 09 - Data Visualisation By 呂伯駿 (Po Chun):\n",
-    "> * [.concate 與 .merge 文件連結](https://pandas.pydata.org/pandas-docs/stable/merging.html)"
+    "merge 跟 concat 他還有一些不常用的參數，未來有時間有興趣可以自己看文件\n",
+    "* [.concate 與 .merge 文件連結](https://pandas.pydata.org/pandas-docs/stable/merging.html)\n",
+    "或是[Lesson 09 - Data Visualisation By 呂伯駿 (Po Chun)](https://nbviewer.jupyter.org/format/slides/github/x-village/python-course/blob/master/Lesson08-Web%20Crawler/Lesson09-Data%20Visualisation.ipynb#/)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "最後一步\n",
+    "# 最後一步\n",
     " * 在資料視覺化的時候，我們會用Series或list匯入處理好的資料\n",
     " * 前置步驟:(假設資料長這樣，我要用姓名當x軸//成績當作y軸)\n",
-    "    >1.從DataFrame轉成list\n",
-    "    >2.從DataFrame轉Series"
+    "     * 1.從DataFrame轉成list\n",
+    "     * 2.從DataFrame轉Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "還記得剛才做出的DataFrame嗎?"
    ]
   },
   {
@@ -1113,7 +1168,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "練習3:\n",
     "> 取出english的數值(從DataFrame轉Series)，並print出type=Series"
@@ -1161,21 +1220,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
    "source": [
     "延伸學習:\n",
-    "> * 從 pandas 開始 Python 與資料科學之旅:https://medium.com/datainpoint/從-pandas-開始-python-與資料科學之旅-8dee36796d4a\n",
-    "> * Pandas Groupby使用！https://ithelp.ithome.com.tw/articles/10194027\n",
+    " * 從 pandas 開始 Python 與資料科學之旅:https://medium.com/datainpoint/從-pandas-開始-python-與資料科學之旅-8dee36796d4a\n",
+    " * Pandas Groupby使用！https://ithelp.ithome.com.tw/articles/10194027\n",
     "\n",
     "參考資料:\n",
-    "> *  Lesson 09 - Data Visualisation By 呂伯駿 (Po Chun):\n",
+    " *  Lesson 09 - Data Visualisation By 呂伯駿 (Po Chun):\n",
     "    https://nbviewer.jupyter.org/format/slides/github/x-village/python-course/blob/master/Lesson08-Web%20Crawler/Lesson09-Data%20Visualisation.ipynb#/\n",
-    "> * pandas資料處理與分析的利器:\n",
+    " * pandas資料處理與分析的利器:\n",
     "    https://drive.google.com/drive/u/0/folders/0B0UIQiTTYz0BWVJkOHJVVGNUNWs\n",
     "        "
    ]
