--- a/slide.ipynb
+++ b/slide.ipynb
@@ -1175,7 +1175,7 @@
    },
    "source": [
     "練習3:\n",
-    "> 取出english的數值(從DataFrame轉Series)，並print出type=Series"
+    " * 取出english的數值(從DataFrame轉Series)，並print出type=Series"
    ]
   },
   {
@@ -1220,14 +1220,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
     "延伸學習:\n",
     " * 從 pandas 開始 Python 與資料科學之旅:https://medium.com/datainpoint/從-pandas-開始-python-與資料科學之旅-8dee36796d4a\n",
@@ -1237,8 +1235,7 @@
     " *  Lesson 09 - Data Visualisation By 呂伯駿 (Po Chun):\n",
     "    https://nbviewer.jupyter.org/format/slides/github/x-village/python-course/blob/master/Lesson08-Web%20Crawler/Lesson09-Data%20Visualisation.ipynb#/\n",
     " * pandas資料處理與分析的利器:\n",
-    "    https://drive.google.com/drive/u/0/folders/0B0UIQiTTYz0BWVJkOHJVVGNUNWs\n",
-    "        "
+    "    https://drive.google.com/drive/u/0/folders/0B0UIQiTTYz0BWVJkOHJVVGNUNWs"
    ]
   },
   {
