--- a/slide.ipynb
+++ b/slide.ipynb
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -703,7 +703,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -898,11 +898,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 解答"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -930,7 +941,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -1343,20 +1354,20 @@
    },
    "source": [
     "# Pandas回顧:\n",
-    "    * 以pandas開啟檔案 pandas.read_csv()\n",
-    "        - print(xxx.head())\n",
-    "        - pandas 的兩種常用物件\n",
-    "    * Series：通常拿來處理一維資料，如時間序列。\n",
-    "        - 索引\n",
-    "        - Series做加減乘除\n",
-    "    * Dataframe：有點像表格\n",
+    ">* 以pandas開啟檔案 pandas.read_csv()\n",
+    "    - print(xxx.head())\n",
+    "    - pandas 的兩種常用物件\n",
+    ">* Series：通常拿來處理一維資料，如時間序列。\n",
+    "    - 索引\n",
+    "    - Series做加減乘除\n",
+    ">* Dataframe：有點像表格\n",
     "        - 索引\n",
     "        - 標籤\n",
-    "    * 選取數據 pandas.DataFrame.loc\n",
-    "    * 統計數字 pandas.DataFrame.describe()\n",
-    "    * 排序     pandas.DataFrame.sort_values()\n",
-    "    * 空值處理 pandas.DataFrame.dropna()\n",
-    "    * 合併     pandas.DataFrame.merge()"
+    ">* 選取數據 pandas.DataFrame.loc\n",
+    ">* 統計數字 pandas.DataFrame.describe()\n",
+    ">* 排序     pandas.DataFrame.sort_values()\n",
+    ">* 空值處理 pandas.DataFrame.dropna()\n",
+    ">* 合併     pandas.DataFrame.merge()"
    ]
   },
   {
