--- a/slide.ipynb
+++ b/slide.ipynb
@@ -168,7 +168,9 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "weight_height=pd.read_csv('Dataframe.csv')\n",
+    "\n",
+    "weight_height = pd.read_csv('Dataframe.csv')\n",
+    "\n",
     "print(weight_height.head()) \n",
     "# print('-'*20)\n",
     "# print(df) "
@@ -270,7 +272,9 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "weight_height=pd.read_csv('Dataframe.csv')\n",
+    "\n",
+    "weight_height = pd.read_csv('Dataframe.csv')\n",
+    "\n",
     "# print(df.head()) \n",
     "# print('-'*20)\n",
     "print(weight_height)"
@@ -354,13 +358,14 @@
    "source": [
     "import pandas as pd\n",
     "# 若不加後面的index，則index預設是0,1,2,3...\n",
-    "kg = [50, 53, 52, 51,52,50, 53, 52, 51,52,50, 53, 52,52]\n",
-    "time=[\"2018/8/11\",\"2018/8/12\",\"2018/8/13\",\"2018/8/14\",\n",
-    "      \"2018/8/15\",\"2018/8/16\",\"2018/8/17\",\"2018/8/18\",\"2018/8/19\"\n",
-    "     ,\"2018/8/21\",\"2018/8/22\",\"2018/8/23\",\"2018/8/24\",\"2018/8/25\"]\n",
-    "weight =  pd.Series(kg,index=time)\n",
     "\n",
-    "print(\"2018/8/22的體重是\",weight[\"2018/8/22\"])#修改這行\n",
+    "kg = [50, 53, 52, 51, 52, 50, 53, 52, 51, 52, 50, 53, 52, 52]\n",
+    "time = [\"2018/8/11\", \"2018/8/12\", \"2018/8/13\", \"2018/8/14\",\n",
+    "        \"2018/8/15\", \"2018/8/16\", \"2018/8/17\", \"2018/8/18\", \n",
+    "        \"2018/8/19\", \"2018/8/21\", \"2018/8/22\", \"2018/8/23\", \"2018/8/24\", \"2018/8/25\"]\n",
+    "weight =  pd.Series(kg, index=time)\n",
+    "\n",
+    "print(\"2018/8/22的體重是\", weight[\"2018/8/22\"])#修改這行\n",
     "print(\"-\"*20)\n",
     "print(weight)"
    ]
@@ -378,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -392,13 +397,14 @@
    "source": [
     "import pandas as pd\n",
     "# 若不加後面的index，則index預設是0,1,2,3...\n",
-    "kg = [50, 53, 52, 51,52,50, 53, 52, 51,52,50, 53, 52,52]\n",
-    "time=[\"2018/8/11\",\"2018/8/12\",\"2018/8/13\",\"2018/8/14\",\n",
-    "      \"2018/8/15\",\"2018/8/16\",\"2018/8/17\",\"2018/8/18\",\"2018/8/19\"\n",
-    "     ,\"2018/8/21\",\"2018/8/22\",\"2018/8/23\",\"2018/8/24\",\"2018/8/25\"]\n",
-    "weight =  pd.Series(kg,index=time)\n",
     "\n",
-    "print(\"2018/8/24的體重是\",weight[\"2018/8/24\"])#修改這行"
+    "kg = [50, 53, 52, 51, 52, 50, 53, 52, 51, 52, 50, 53, 52, 52]\n",
+    "time = [\"2018/8/11\", \"2018/8/12\", \"2018/8/13\", \"2018/8/14\",\n",
+    "        \"2018/8/15\", \"2018/8/16\", \"2018/8/17\", \"2018/8/18\", \n",
+    "        \"2018/8/19\", \"2018/8/21\", \"2018/8/22\", \"2018/8/23\", \"2018/8/24\", \"2018/8/25\"]\n",
+    "weight = pd.Series(kg, index=time)\n",
+    "\n",
+    "print(\"2018/8/24的體重是\", weight[\"2018/8/24\"])#修改這行"
    ]
   },
   {
@@ -436,9 +442,11 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "kg = [50, 53, 52, 51,52]\n",
-    "time=[\"2018/8/11\",\"2018/8/12\",\"2018/8/13\",\"2018/8/14\",\"2018/8/15\"]\n",
-    "series=pd.Series(kg,index=time)\n",
+    "\n",
+    "kg = [50, 53, 52, 51, 52]\n",
+    "time = [\"2018/8/11\", \"2018/8/12\", \"2018/8/13\", \"2018/8/14\", \"2018/8/15\"]\n",
+    "series = pd.Series(kg, index=time)\n",
+    "\n",
     "print(weight)"
    ]
   },
@@ -462,8 +470,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruit=[\"banana\",\"apple\",\"kiwi\",\"watermelon\"]\n",
-    "price=[10,20,8,80]"
+    "fruit = [\"banana\", \"apple\", \"kiwi\", \"watermelon\"]\n",
+    "price = [10, 20, 8, 80]"
    ]
   },
   {
@@ -504,13 +512,17 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "fruit=[\"banana\",\"apple\",\"kiwi\",\"watermelon\"] \n",
-    "price=[10,20,8,80] \n",
-    "fruit_price=pd.Series(price,index=fruit)\n",
+    "\n",
+    "fruit = [\"banana\", \"apple\", \"kiwi\", \"watermelon\"] \n",
+    "price = [10, 20, 8, 80] \n",
+    "fruit_price = pd.Series(price, index=fruit)\n",
+    "\n",
     "print(fruit_price)\n",
     "print(\"-\"*20)\n",
+    "\n",
     "print(\"banana\",fruit_price[\"banana\"])\n",
     "print(\"-\"*20)\n",
+    "\n",
     "print(\"kiwi\",fruit_price[2])\n"
    ]
   },
@@ -551,13 +563,15 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "fruit=[\"banana\",\"apple\",\"kiwi\",\"watermelon\",\"grape\"] \n",
-    "price=[10,20,8,80,60] \n",
-    "fruit_price=pd.Series(price,index=fruit)\n",
+    "\n",
+    "fruit = [\"banana\", \"apple\", \"kiwi\", \"watermelon\", \"grape\"] \n",
+    "price = [10, 20, 8, 80, 60] \n",
+    "fruit_price = pd.Series(price, index=fruit)\n",
     "\n",
     "print(fruit_price[1:3]) # 從索引順序第2個到第4個\n",
     "print('-'*20)\n",
-    "print(fruit_price[\"banana\":\"kiwi\"]) #從第一個 ~ \"kiwi\""
+    "\n",
+    "print(fruit_price[\"banana\":\"kiwi\"]) #從\"banana\" ~ \"kiwi\"\n"
    ]
   },
   {
@@ -613,13 +627,18 @@
     }
    ],
    "source": [
-    "item = [\"book\",\"ball\",\"car\",\"apple\"]\n",
-    "price = pd.Series([100,200,40,10])\n",
-    "counts = pd.Series([1,3,5,6])\n",
-    "total= price*counts\n",
+    "import pandas as pd\n",
+    "\n",
+    "item = [\"book\", \"ball\", \"car\", \"apple\"]\n",
+    "price = pd.Series([100, 200, 40, 10])\n",
+    "counts = pd.Series([1, 3, 5, 6])\n",
+    "\n",
+    "total = price*counts\n",
+    "\n",
     "print(total)\n",
     "print('-'*20)\n",
-    "total.index=item\n",
+    "\n",
+    "total.index = item\n",
     "print(total)"
    ]
   },
@@ -747,13 +766,14 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
-    "english=[100,90,65,80]\n",
-    "math=[60,80,60,100]\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
     "\n",
-    "dic={\"name\":name,\"english\":english,\"math\":math}\n",
-    "test_score=pd.DataFrame(dic)\n",
+    "name = [\"Amy\", \"John\", \"Max\", \"Hill\"]\n",
+    "english = [100, 90, 65, 80]\n",
+    "math = [60, 80, 60, 100]\n",
+    "\n",
+    "dic = {\"name\":name,\"english\":english,\"math\":math}\n",
+    "test_score = pd.DataFrame(dic)\n",
+    "\n",
     "print(test_score)\n",
     "print(type(test_score))"
    ]
@@ -793,12 +813,14 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
-    "english=[100,90,65,80]\n",
-    "math=[60,80,60,100]\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
-    "dic={\"english\":english,\"math\":math}\n",
-    "test_score=pd.DataFrame(dic,index=name)\n",
+    "\n",
+    "name = [\"Amy\", \"John\", \"Max\", \"Hill\"]\n",
+    "english = [100, 90, 65, 80]\n",
+    "math = [60, 80, 60, 100]\n",
+    "\n",
+    "dic = {\"english\":english,\"math\":math}\n",
+    "test_score = pd.DataFrame(dic, index=name)\n",
+    "\n",
     "print(test_score)\n",
     "print(type(test_score))"
    ]
@@ -871,13 +893,16 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "a=test_score[\"english\"]#印出行\n",
+    "\n",
+    "a = test_score[\"english\"]#印出行\n",
     "print(a)\n",
     "print(\"-\"*20)\n",
-    "b=test_score.loc[\"Amy\"]#印出列\n",
+    "\n",
+    "b = test_score.loc[\"Amy\"]#印出列\n",
     "print(b)\n",
     "print(\"-\"*20)\n",
-    "c=test_score.loc[\"Amy\",\"english\"]#印出列行\n",
+    "\n",
+    "c = test_score.loc[\"Amy\", \"english\"]#印出列行\n",
     "print(c)"
    ]
   },
@@ -930,10 +955,11 @@
     }
    ],
    "source": [
-    "b=test_score.loc[\"Max\"]#印出列\n",
+    "b = test_score.loc[\"Max\"]#印出列\n",
     "print(b)\n",
     "print(\"-\"*20)\n",
-    "c=test_score.loc[\"Max\",\"math\"]#印出列行\n",
+    "\n",
+    "c = test_score.loc[\"Max\", \"math\"]#印出列行\n",
     "print(c)"
    ]
   },
@@ -1021,7 +1047,8 @@
     }
    ],
    "source": [
-    "english_ascending=test_score.sort_values(by=\"english\")\n",
+    "english_ascending = test_score.sort_values(by=\"english\")\n",
+    "\n",
     "print(english_ascending)"
    ]
   },
@@ -1058,13 +1085,26 @@
    "source": [
     "#參考\n",
     "import pandas as pd\n",
-    "english=[100,90,65,80]\n",
-    "math=[60,80,60,100]\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
     "\n",
-    "dic={\"english\":english,\"math\":math}\n",
-    "test_score=pd.DataFrame(dic,index = name)\n",
+    "english = [100,90,65,80]\n",
+    "math = [60,80,60,100]\n",
+    "name = [\"Amy\", \"John\", \"Max\", \"Hill\"]\n",
+    "\n",
+    "dic = {\"english\":english,\"math\":math}\n",
+    "test_score = pd.DataFrame(dic, index=name)\n",
+    "\n",
     "print(test_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 解答 :依 math的 values降冪排序 "
    ]
   },
   {
@@ -1072,7 +1112,7 @@
    "execution_count": 83,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -1089,9 +1129,10 @@
     }
    ],
    "source": [
-    "#依 math的 values降冪排序 \n",
     "import pandas as pd\n",
-    "math_declining=test_score.sort_values(by=\"math\", ascending=False)\n",
+    "\n",
+    "math_declining = test_score.sort_values(by=\"math\", ascending=False)\n",
+    "\n",
     "print(math_declining)"
    ]
   },
@@ -1151,8 +1192,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "# np.nan 是從 numpy 來的，意思是空值，這裡可以先不管他。\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
-    "nannan = pd.DataFrame([[100,60],[90,np.nan],[65,60],[80,np.nan]], index=name,columns=list([\"english\",\"math\"]))\n",
+    "\n",
+    "name = [\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
+    "nannan = pd.DataFrame([[100, 60],[90, np.nan],[65, 60],[80, np.nan]], index=name, columns=list([\"english\",\"math\"]))\n",
+    "\n",
     "print(nannan)\n",
     "print(type(nannan))"
    ]
@@ -1185,7 +1228,10 @@
     }
    ],
    "source": [
-    "drop_nan=nannan.dropna()\n",
+    "import pandas as pd\n",
+    "\n",
+    "drop_nan = nannan.dropna()\n",
+    "\n",
     "print(drop_nan)"
    ]
   },
@@ -1225,10 +1271,13 @@
     }
    ],
    "source": [
-    "math_=[60,80,60,100]\n",
-    "math_new=pd.Series(math_)\n",
+    "import pandas as pd\n",
     "\n",
-    "df2[\"math\"]=math_new.values\n",
+    "math_ = [60, 80, 60, 100]\n",
+    "math_new = pd.Series(math_)\n",
+    "\n",
+    "df2[\"math\"] = math_new.values\n",
+    "\n",
     "print(df2)"
    ]
   },
@@ -1286,19 +1335,20 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "english=[100,90,65,80]\n",
-    "math=[60,80,60,100]\n",
-    "name=[\"Amy\",\"John\",\"Max\",\"Hill\"]\n",
     "\n",
-    "dic={\"name\":name,\"english\":english,\"math\":math}\n",
-    "left=pd.DataFrame(dic)\n",
+    "english = [100, 90, 65, 80]\n",
+    "math = [60, 80, 60, 100]\n",
+    "name = [\"Amy\", \"John\", \"Max\", \"Hill\"]\n",
+    "\n",
+    "dic = {\"name\":name,\"english\":english,\"math\":math}\n",
+    "left = pd.DataFrame(dic)\n",
     "test_score.index = name\n",
+    "\n",
     "print(left)\n",
     "print(\"-\"*20)\n",
     "\n",
-    "dic_1={\"name\":[\"Max\",\"Hill\",\"Amy\",\"John\"],\n",
-    "     \"chinese\":[60,80,65,50]}\n",
-    "right=pd.DataFrame(dic_1)\n",
+    "dic_1 = {\"name\":[\"Max\", \"Hill\", \"Amy\", \"John\"], \"chinese\":[60, 80, 65, 50]}\n",
+    "right = pd.DataFrame(dic_1)\n",
     "\n",
     "print(right)"
    ]
@@ -1334,7 +1384,10 @@
     }
    ],
    "source": [
-    "merge=pd.merge(left,right, on='name')\n",
+    "import pandas as pd\n",
+    "\n",
+    "merge = pd.merge(left, right, on='name')\n",
+    "\n",
     "print(merge)"
    ]
   },
